--- a/server/main/templates/main/contacts.html
+++ b/server/main/templates/main/contacts.html
@@ -1,8 +1,13 @@
 ﻿{% extends 'master.html' %}
+{%  load static %}
 
 {%  block page_title %}
 Контакты
 {%  endblock %}
+
+{% block page_styles %}
+<link rel="stylesheet" href="{% static 'main/style.css' %}">
+{% endblock %}
 
 {%  block page_content %}
 <h3>
