--- a/server/main/templates/main/index.html
+++ b/server/main/templates/main/index.html
@@ -1,8 +1,13 @@
 {% extends 'master.html' %}
+{%  load static %}
 
 {%  block page_title %}
 Главная страница
 {%  endblock %}
+
+{% block page_styles %}
+<link rel="stylesheet" href="{% static 'main/style.css' %}">
+{% endblock %}
 
 {%  block page_content %}
 <p class="mainslogan">
@@ -11,7 +16,7 @@
     В нашем интернет магазине представлен широкий перечень книг, необходимых для подготовки к сдаче квалификационного экзамена  
     для лиц, желающих вступить в саморегулируемую организацию актуариев.
 </p>
-<img class="imgstudents" src="img/students.jpg" alt="students" title="students">
+<img class="imgstudents" src="{% static 'main/img/students.jpg' %}" alt="students" title="students">
 <p class="maindisc">
     Студентам предоставляются скидки.
 </p>
