--- a/server/server/templates/master.html
+++ b/server/server/templates/master.html
@@ -24,6 +24,7 @@
                     <li><a href="{%  url 'main:index' %}">Главная</a></li>
                     <li><a href="{%  url 'products:index' %}">Каталог</a></li>
                     <li><a href="{%  url 'main:contacts' %}">Контакты</a></li>
+                    <li><a href="{%  url 'accounts:login' %}">Личный кабинет</a></li>
                 </ul>
                 <div class="clearfix"></div>
             </header>
