--- a/server/accounts/templates/accounts/login.html
+++ b/server/accounts/templates/accounts/login.html
@@ -2,14 +2,5 @@
 {%  load static %}
 
 {% block page_content %}
-<form method="POST" action="{% url 'accounts:login' %}">
-    {%  csrf_token %}
-    {%  for field in form %}
-    <div class="field-group">
-        <label for="{{ field.name }}">{{ field.label }}</label>
-        {{  field }}
-    </div>
-    {%  endfor %}
-    <input type="submit">
-</form>
+    {% include 'components/form.html' with form=form %}
 {%  endblock %}
