--- a/server/products/templates/products/catalog.html
+++ b/server/products/templates/products/catalog.html
@@ -15,35 +15,7 @@
 </h2>
 
 {% for itm in books %}
-<div class="blockcatalog">
-    <a href="{% url 'products:book' pk=itm.id %}"><img class="imgcatalog" src="{{ itm.image.url }}" alt="{{ itm.sauthor }}"></a>
-
-
-   <div class="catalogBook">
-       <h4>{{ itm.sauthor }}
-           <br>
-           {{ itm.sname }}
-       </h4>
-       <a href="{% url 'products:book' pk=itm.id %}">Описание</a>
-   </div>
-   <div class="catalogbuy">
-       В наличии 
-       <br>
-       Доставка на завтра
-       <br>
-       <input type="button" value="Купить">
-   </div>
-   <div class="clearfix"></div>
-</div>
+{% include 'components/catalog_book.html' with sname=itm.sname sauthor=itm.sauthor url=itm.image.url cost=itm.cost id=itm.id %}
 {% endfor %}
-<!-- <ul>
-    {% for itm in books %}
-    <div class="catalogBook">
-        <h4>
-            <a href= "{% url 'products:book' pk=itm.id %}">{{ itm.sauthor }}</a>
-        </h4>
 
-    </div>
-    {% endfor %}
-</ul> -->
 {%  endblock %}
