Домашнее задание к уроку 7

--- a/server/main/static/main/style.css
+++ b/server/main/static/main/style.css
@@ -125,6 +125,10 @@ h3 {
     color: #00c026;  
     font-size: 18px;
 }
+
+.showmorebuttonhidden {
+    display: none;
+}
 .h4desc {
     color: #000000;
     font-size: 18px;
