--- a/server/server/templates/components/catalog_book.html
+++ b/server/server/templates/components/catalog_book.html
@@ -1,4 +1,4 @@
-<div class="blockcatalog">
+<!-- <div class="blockcatalog"> -->
     <a href="{% url 'products:book' pk=id %}"><img class="imgcatalog" src="{{ url }}" alt="{{ sauthor }}"></a>
 
 
@@ -17,4 +17,4 @@
        <input type="button" value="Купить">
    </div>
    <div class="clearfix"></div>
-</div>
+<!-- </div> -->
