Домашнее задание к уроку 8

--- a/server/products/templates/products/catalog.html
+++ b/server/products/templates/products/catalog.html
@@ -46,7 +46,7 @@
                         itm => bookCatalog.innerHTML += renderBook(itm)
                     )
                     if (data.next_url) {
-                        bookUrl = data.next_url
+                        bookUrl = data.next
                     } else {
                         showMoreButton.classList.add('showmorebuttonhidden')
                     }
